# BlackJack

./: .clang-format  .gitignore  CMakeLists.txt  tmp
.github/workflows/: actions.yaml
include/: blackjack.h
src/: blackjack.cpp  main.cpp  probabilities.cpp  shell.cpp
tests/functional_tests/: test.example  tester.sh
